--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             controls.addEventListener("error", onUIErrorEvent);
 
             try {
-                await player.load("https://otte.live.fly.ww.aiv-cdn.net/syd-nitro/live/clients/dash/enc/uugw0qkwob/out/v1/acfdcf2dabd24075bb615c6c19ba9bd4/cenc.mpd");
+                await player.load("https://aba5sdmaaaaaaaamlehympi3yw64b.otte.live.cf.ww.aiv-cdn.net/syd-nitro/live/clients/dash/enc/4ov3wylsyb/out/v1/acfdcf2dabd24075bb615c6c19ba9bd4/cenc.mpd");
                 console.log("The video has now been loaded!");
             } catch (error) {
                 onPlayerError(error);
