--- a/index.html
+++ b/index.html
@@ -1,169 +1,145 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TEAMROHITOFFICAL45</title>
+  <title>Shaka Player + Telegram Popup</title>
 
-  <!-- Shaka Player Core & UI -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.1/shaka-player.compiled.min.js"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.1/shaka-player.ui.min.js"
-    crossorigin="anonymous"></script>
-
-  <!-- Shaka Player UI Styles -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.1/controls.min.css"
-    crossorigin="anonymous">
+  <!-- Shaka Player UI Script & Styles -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.1/shaka-player.ui.min.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.1/controls.min.css" crossorigin="anonymous">
 
   <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      background: #000;
-      font-family: 'Poppins', sans-serif;
-    }
-
     #video-container {
-      width: 100%;
-      height: 100%;
+      width: 80%;
+      max-width: 800px;
+      margin: auto;
+      margin-top: 50px;
       position: relative;
     }
-
     video {
       width: 100%;
-      height: 100%;
+      height: auto;
     }
 
-    /* Telegram Popup */
+    /* Telegram Popup Styles */
     #telegram-popup {
       position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: linear-gradient(145deg, #1f1f1f, #2c2c2c);
-      color: #fff;
-      width: 300px;
-      height: 300px;
-      border-radius: 20px;
-      box-shadow: 0 0 30px rgba(0, 0, 0, 0.7);
-      z-index: 9999;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background-color: rgba(0, 0, 0, 0.7);
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
+      z-index: 9999;
+    }
+
+    #popup-box {
+      background: #fff;
+      padding: 30px 20px;
+      border-radius: 10px;
       text-align: center;
-      animation: popupFadeIn 0.5s ease forwards;
-      padding: 15px;
+      width: 90%;
+      max-width: 400px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.5);
     }
 
-    #telegram-popup h3 {
-      margin-bottom: 10px;
-      font-size: 22px;
-      color: #00afff;
+    #popup-box h2 {
+      margin-bottom: 15px;
+      font-size: 20px;
     }
 
-    #telegram-popup p {
-      font-size: 14px;
-      color: #ccc;
-      margin-bottom: 20px;
-    }
-
-    #telegram-popup button {
-      background: #00afff;
+    .popup-button {
+      margin: 10px;
+      padding: 10px 20px;
+      font-size: 16px;
       border: none;
-      color: #fff;
-      padding: 10px 15px;
-      margin: 6px 0;
-      border-radius: 8px;
+      border-radius: 5px;
       cursor: pointer;
-      font-weight: bold;
-      width: 80%;
-      font-size: 15px;
-      transition: background 0.3s, transform 0.2s;
     }
 
-    #telegram-popup button:hover {
-      background: #008fcc;
-      transform: scale(1.05);
+    .join-btn {
+      background-color: #0088cc;
+      color: white;
     }
 
-    @keyframes popupFadeIn {
-      from {
-        opacity: 0;
-        transform: translate(-50%, -40%);
-      }
-      to {
-        opacity: 1;
-        transform: translate(-50%, -50%);
-      }
+    .already-joined-btn {
+      background-color: #ddd;
     }
   </style>
 </head>
-
 <body>
+
+  <!-- Video Container -->
   <div id="video-container">
-    <video id="video" class="shaka-video" autoplay muted></video>
-    <div id="controls" class="shaka-controls-container"></div>
+    <video id="video"
+           poster="https://shaka-player-demo.appspot.com/assets/poster.jpg"
+           autoplay
+           muted
+           controls></video>
+    <div class="shaka-controls-container" data-shaka-player-container>
+      <div data-shaka-player></div>
+    </div>
   </div>
 
-  <!-- Telegram Pop-up -->
-  <div id="telegram-popup">
-    <h3>Join Our Telegram</h3>
-    <p>Get live match links and exclusive updates.</p>
-    <button onclick="window.open('https://t.me/+e6G48oujQuExOTg1', '_blank')">Join Telegram</button>
-    <button onclick="document.getElementById('telegram-popup').remove()">Already Joined</button>
+  <!-- Telegram Popup -->
+  <div id="telegram-popup" style="display: none;">
+    <div id="popup-box">
+      <h2>Join our Telegram Channel</h2>
+      <p>Stay updated by joining our official channel!</p>
+      <button class="popup-button join-btn" onclick="joinTelegram()">Join Now</button>
+      <button class="popup-button already-joined-btn" onclick="dismissPopup()">Already Joined</button>
+    </div>
   </div>
 
   <script>
-    document.addEventListener('DOMContentLoaded', async () => {
-      if (!shaka.Player.isBrowserSupported()) {
-        alert('Shaka Player is not supported in this browser.');
-        return;
-      }
-
+    async function initPlayer() {
       const video = document.getElementById('video');
-      const container = document.getElementById('video-container');
-
-      const player = new shaka.Player(video);
-      const ui = new shaka.ui.Overlay(player, container, video);
+      const ui = video['ui'];
       const controls = ui.getControls();
+      const player = controls.getPlayer();
 
-      // Player config
-      player.configure({
-        drm: {
-          clearKeys: {
-            'ec2147a4b9b1b87ee3d8dc6915bc7928': 'c84fcd82767a9cd9e2e0c0d1b47a72c5'
-          }
-        },
-        streaming: {
-          abr: { enabled: true },
-          bufferingGoal: 10,
-          rebufferingGoal: 5,
-          lowLatencyMode: true
-        }
-      });
-
-      ui.configure({
-        controlPanelElements: [
-          'rewind', 'fast_forward', 'mute', 'volume',
-          'spacer', 'time_and_duration', 'fullscreen', 'overflow_menu'
-        ],
-        overflowMenuButtons: ['quality', 'language', 'playback_rate', 'captions'],
-        autoHide: false,
-        fadeDelay: 0
+      player.addEventListener('error', (e) => {
+        console.error('Error code', e.detail.code, 'object', e.detail);
       });
 
       try {
-        await player.load('https://otte.live.fly.ww.aiv-cdn.net/bom-nitro/live/clients/dash/enc/uugw0qkwob/out/v1/acfdcf2dabd24075bb615c6c19ba9bd4/cenc.mpd');
-        console.log('Video loaded!');
+        await player.load(
+          'https://otte.live.fly.ww.aiv-cdn.net/bom-nitro/live/clients/dash/enc/uugw0qkwob/out/v1/acfdcf2dabd24075bb615c6c19ba9bd4/cenc.mpd',
+          null,
+          {
+            drm: {
+              clearKeys: {
+                'ec2147a4b9b1b87ee3d8dc6915bc7928': 'c84fcd82767a9cd9e2e0c0d1b47a72c5'
+              }
+            }
+          }
+        );
+        console.log('Video loaded successfully!');
       } catch (e) {
-        console.error('Error loading video:', e);
-        alert('Failed to load video stream. Please try again later.');
+        console.error('Failed to load video:', e);
+      }
+    }
+
+    document.addEventListener('DOMContentLoaded', () => {
+      initPlayer();
+
+      // Show Telegram popup if not already dismissed
+      if (!localStorage.getItem('telegramJoined')) {
+        document.getElementById('telegram-popup').style.display = 'flex';
       }
     });
-  </script>
-</body>
 
+    function joinTelegram() {
+      window.open('https://t.me/+e6G48oujQuExOTg1', '_blank');
+    }
+
+    function dismissPopup() {
+      document.getElementById('telegram-popup').style.display = 'none';
+      localStorage.setItem('telegramJoined', 'true');
+    }
+  </script>
+
+</body>
 </html>
