--- a/index.html
+++ b/index.html
@@ -1,145 +1,169 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>Shaka Player + Telegram Popup</title>
-
-  <!-- Shaka Player UI Script & Styles -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.1/shaka-player.ui.min.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.1/controls.min.css" crossorigin="anonymous">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TEAMROHITOFFICAL45_LIVE</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.1/shaka-player.ui.min.js"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.1/controls.min.css"
+    crossorigin="anonymous">
   <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      background: #000;
+      font-family: 'Poppins', sans-serif;
+    }
+
     #video-container {
-      width: 80%;
-      max-width: 800px;
-      margin: auto;
-      margin-top: 50px;
+      width: 100%;
+      height: 100%;
       position: relative;
     }
+
     video {
       width: 100%;
-      height: auto;
+      height: 100%;
     }
 
-    /* Telegram Popup Styles */
+    /* Premium Centered Square Telegram Popup Styles */
     #telegram-popup {
       position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      background-color: rgba(0, 0, 0, 0.7);
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: linear-gradient(145deg, #1f1f1f, #2c2c2c);
+      color: #fff;
+      width: 300px;
+      height: 300px;
+      border-radius: 20px;
+      box-shadow: 0 0 30px rgba(0, 0, 0, 0.7);
+      z-index: 9999;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
-      z-index: 9999;
-    }
-
-    #popup-box {
-      background: #fff;
-      padding: 30px 20px;
-      border-radius: 10px;
       text-align: center;
-      width: 90%;
-      max-width: 400px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.5);
+      animation: popupFadeIn 0.5s ease forwards;
+      padding: 15px;
     }
 
-    #popup-box h2 {
-      margin-bottom: 15px;
-      font-size: 20px;
+    #telegram-popup h3 {
+      margin-bottom: 10px;
+      font-size: 22px;
+      color: #00afff;
     }
 
-    .popup-button {
-      margin: 10px;
-      padding: 10px 20px;
-      font-size: 16px;
+    #telegram-popup p {
+      font-size: 14px;
+      color: #ccc;
+      margin-bottom: 20px;
+    }
+
+    #telegram-popup button {
+      background: #00afff;
       border: none;
-      border-radius: 5px;
+      color: #fff;
+      padding: 10px 15px;
+      margin: 6px 0;
+      border-radius: 8px;
       cursor: pointer;
+      font-weight: bold;
+      width: 80%;
+      font-size: 15px;
+      transition: background 0.3s, transform 0.2s;
     }
 
-    .join-btn {
-      background-color: #0088cc;
-      color: white;
+    #telegram-popup button:hover {
+      background: #008fcc;
+      transform: scale(1.05);
     }
 
-    .already-joined-btn {
-      background-color: #ddd;
+    @keyframes popupFadeIn {
+      from {
+        opacity: 0;
+        transform: translate(-50%, -40%);
+      }
+      to {
+        opacity: 1;
+        transform: translate(-50%, -50%);
+      }
     }
   </style>
 </head>
-<body>
 
-  <!-- Video Container -->
+<body>
   <div id="video-container">
-    <video id="video"
-           poster="https://shaka-player-demo.appspot.com/assets/poster.jpg"
-           autoplay
-           muted
-           controls></video>
-    <div class="shaka-controls-container" data-shaka-player-container>
-      <div data-shaka-player></div>
-    </div>
+    <video id="video" class="shaka-video" autoplay muted></video>
+    <div id="controls" class="shaka-controls-container"></div>
   </div>
 
-  <!-- Telegram Popup -->
-  <div id="telegram-popup" style="display: none;">
-    <div id="popup-box">
-      <h2>Join our Telegram Channel</h2>
-      <p>Stay updated by joining our official channel!</p>
-      <button class="popup-button join-btn" onclick="joinTelegram()">Join Now</button>
-      <button class="popup-button already-joined-btn" onclick="dismissPopup()">Already Joined</button>
-    </div>
+  <!-- Premium Centered Square Telegram Pop-up -->
+  <div id="telegram-popup">
+    <h3>Join Our Telegram</h3>
+    <p>Get live match links and exclusive updates.</p>
+    <button onclick="window.open('https://t.me/+e6G48oujQuExOTg1', '_blank')">Join Telegram</button>
+    <button onclick="document.getElementById('telegram-popup').remove()">Already Joined</button>
   </div>
 
   <script>
     async function initPlayer() {
       const video = document.getElementById('video');
-      const ui = video['ui'];
+      const container = document.getElementById('video-container');
+      const ui = new shaka.ui.Overlay(new shaka.Player(video), container, video);
       const controls = ui.getControls();
       const player = controls.getPlayer();
 
-      player.addEventListener('error', (e) => {
-        console.error('Error code', e.detail.code, 'object', e.detail);
+      player.configure({
+        drm: {
+          clearKeys: {
+            'ec2147a4b9b1b87ee3d8dc6915bc7928': 'c84fcd82767a9cd9e2e0c0d1b47a72c5'
+          }
+        },
+        streaming: {
+          abr: { enabled: true },
+          bufferingGoal: 10,
+          rebufferingGoal: 5,
+          lowLatencyMode: true
+        }
       });
 
+      ui.configure({
+        controlPanelElements: [
+          'rewind', 'fast_forward',
+          'mute', 'volume', 'spacer', 'time_and_duration',
+          'fullscreen', 'overflow_menu'
+        ],
+        overflowMenuButtons: ['quality', 'language', 'playback_rate', 'captions'],
+        autoHide: false,
+        fadeDelay: 0
+      });
+
+      const manifestUri = 'https://otte.live.fly.ww.aiv-cdn.net/bom-nitro/live/clients/dash/enc/uugw0qkwob/out/v1/acfdcf2dabd24075bb615c6c19ba9bd4/cenc.mpd';
+
       try {
-        await player.load(
-          'https://otte.live.fly.ww.aiv-cdn.net/bom-nitro/live/clients/dash/enc/uugw0qkwob/out/v1/acfdcf2dabd24075bb615c6c19ba9bd4/cenc.mpd',
-          null,
-          {
-            drm: {
-              clearKeys: {
-                'ec2147a4b9b1b87ee3d8dc6915bc7928': 'c84fcd82767a9cd9e2e0c0d1b47a72c5'
-              }
-            }
-          }
-        );
-        console.log('Video loaded successfully!');
+        await player.load(manifestUri);
+        console.log('Video loaded!');
       } catch (e) {
-        console.error('Failed to load video:', e);
+        console.error('Error loading video', e);
       }
+
+      setTimeout(() => {
+        const spinner = container.querySelector('.shaka-spinner-container');
+        if (spinner) spinner.remove();
+      }, 500);
+
+      setTimeout(() => {
+        const playPause = container.querySelector('.shaka-play-button');
+        if (playPause) playPause.remove();
+      }, 800);
     }
 
-    document.addEventListener('DOMContentLoaded', () => {
-      initPlayer();
-
-      // Show Telegram popup if not already dismissed
-      if (!localStorage.getItem('telegramJoined')) {
-        document.getElementById('telegram-popup').style.display = 'flex';
-      }
-    });
-
-    function joinTelegram() {
-      window.open('https://t.me/+e6G48oujQuExOTg1', '_blank');
-    }
-
-    function dismissPopup() {
-      document.getElementById('telegram-popup').style.display = 'none';
-      localStorage.setItem('telegramJoined', 'true');
-    }
+    document.addEventListener('DOMContentLoaded', initPlayer);
   </script>
-
 </body>
+
 </html>
